# pl-learn

./: .gitignore  Makefile  README.md  _debug.ml  dune-project
docs/: index.md  lesson01.md  lesson02.md  lesson03.md  lesson04.md  lesson05.md  lesson06.md  lesson07.md  lesson08.md  lesson09.md  lesson10.md  lesson11.md  lesson12.md  lesson14.md
docs/plans/: 2025-01-19-00-project-setup.md  2025-01-19-01-arithmetic-expressions.md  2025-01-19-02-lambda-calculus.md  2025-01-19-03-simply-typed-lambda.md  2025-01-19-04-operational-semantics.md  2025-01-19-05-continuations.md
examples/: dune  lesson02_examples.ml  lesson03_examples.ml  lesson04_examples.ml  lesson05_examples.ml  lesson11_examples.ml  main.ml
examples/lesson01/: dune  lesson01_examples.ml
examples/lesson02/: dune
examples/lesson03/: dune
examples/lesson04/: dune
examples/lesson05/: dune  examples.ml
examples/lesson06/: dune  examples.ml
examples/lesson07/: dune  examples.ml
examples/lesson08/: dune  examples.ml
examples/lesson09/: dune  examples.ml
examples/lesson10/: dune  lesson10_examples.ml
examples/lesson12/: dune  examples.ml
examples/lesson14/: dune  examples.ml
lib/: dune
lib/lesson01/: arithmetic.ml  arithmetic.mli  dune
lib/lesson02/: dune  lambda.ml  lambda.mli
lib/lesson03/: dune  typed.ml  typed.mli
lib/lesson04/: bigstep.ml  bigstep.mli  dune  smallstep.ml  smallstep.mli
lib/lesson05/: control.ml  control.mli  cps.ml  cps.mli  dune
lib/lesson06/: dune  inference.ml  inference.mli  types.ml  types.mli  unify.ml  unify.mli
test/: dune  main.ml
(+85 files in other folders)
